WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
272476
invalidateLineLayoutPath does not need to be virtual
https://bugs.webkit.org/show_bug.cgi?id=272476
Summary
invalidateLineLayoutPath does not need to be virtual
alan
Reported
2024-04-10 12:33:22 PDT
ssia
Attachments
[fast-cq]Patch
(1.71 KB, patch)
2024-04-10 12:34 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2024-04-10 12:34:35 PDT
Created
attachment 470852
[details]
[fast-cq]Patch
EWS
Comment 2
2024-04-10 21:58:30 PDT
Committed
277355@main
(62d9c8a60502): <
https://commits.webkit.org/277355@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 470852
[details]
.
Radar WebKit Bug Importer
Comment 3
2024-04-10 21:59:13 PDT
<
rdar://problem/126252263
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug