invalidateLineLayoutPath does not need to be virtual https://bugs.webkit.org/show_bug.cgi?id=272476

Reviewed by Simon Fraser.

* Source/WebCore/rendering/RenderBlock.h:
(WebCore::RenderBlock::invalidateLineLayoutPath): Deleted.
* Source/WebCore/rendering/RenderBlockFlow.h:

Canonical link: https://commits.webkit.org/277355@main